--- a/estilos/style.css
+++ b/estilos/style.css
@@ -19,7 +19,7 @@ body{
 }
 
 main{
-     position: relative;
+    position: relative;
     height: 100vh;
    
 }
@@ -32,6 +32,13 @@ section#telefone{
     left: 50%;
     transform: translate(-50%, -50%);
     background: url('../imagens/frame-iphone.png') no-repeat;
-    
 }
 
+iframe#tela{
+    position: relative;
+    top: 81px;
+    left: 22px;
+    width: 266px;
+    height: 471px;
+    
+}
